// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`JSONSchemaViewer - null type test 0 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          null
        </span>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        />
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        >
          A simple null example
        </div>
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - null type test 1 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          string
        </span>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        >
          <div>
            ❓ Nullable
          </div>
          <div>
            <strong>
              Possible values :
            </strong>
             
            <ul>
              <li>
                <code>
                  null
                </code>
              </li>
              <li>
                <code>
                  Some constant here ...
                </code>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </details>
</DocumentFragment>
`;
